# mcp-jail

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: audit.rs  canonical.rs  cli.rs  clipboard.rs  commands.rs  errors.rs  main.rs  notify.rs  prompt.rs  sandbox.rs  sentry.rs  store.rs  wrap.rs
node/: package-lock.json  package.json  tsconfig.json
node/src/: cli.ts  errors.ts  hook.ts  index.ts  register.ts
node/src/tests/: hook.test.ts
python/: README.md  mcp_jail.pth  pyproject.toml
python/src/mcp_jail/: __init__.py  _activate.py  _cli.py  _guard.py
tests/cve-repro/: arg-path-toctou.sh  argv-file-hash-toctou.sh  argv0-spoof.sh  audit-chain.sh  env-essentials.sh  fay_repro.py  flowise_repro.js  interpreter-smuggling.sh  notification.sh  pending-flood.sh  sandbox-escape.sh  sandbox-profile-injection.sh  signing-tamper.sh  source-config-bypass.sh  sweep.py  sweep.sh  wrap-marker-forgery.sh
tests/e2e/: test_family3_config_drift.py  test_family4_marketplace_install.py  test_litellm_style_rce.py
