[workspace]
resolver = "2"
members = ["cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lukeswitz/mcp-jail"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stderr = "allow"
print_stdout = "allow"
await_holding_lock = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
