[workspace]
resolver = "2"
members = ["cli"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/lukeswitz/mcp-jail"

[workspace.lints.clippy]
# Load-bearing correctness + safety lints only. `pedantic` is intentionally
# left off so CI doesn't trip on style nits; run `cargo clippy -W clippy::pedantic`
# locally if you want them.
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
await_holding_lock = "deny"
