[package]
name = "mcp-jail"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Allow-list + sandbox guard for MCP STDIO transport"

[[bin]]
name = "mcp-jail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
shell-escape = "0.1"
libc = "0.2"

[lints]
workspace = true
