[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-jail"
version = "0.1.0"
description = "Allow-list + sandbox guard for Anthropic MCP STDIO transport"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "mcp-jail" }]
keywords = ["mcp", "security", "sandbox", "rce", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/lukeswitz/mcp-jail"
Issues = "https://github.com/lukeswitz/mcp-jail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jail"]

# Ship the .pth activator in the wheel root so pip drops it directly into
# whichever site-packages it installs to. This means `pip install mcp-jail`
# inside ANY venv auto-registers the import hook in that interpreter — not
# just the global user site. Previously the CLI's `init` wrote the .pth
# only to the user site, leaving venv-scoped MCP consumers unprotected.
[tool.hatch.build.targets.wheel.force-include]
"mcp_jail.pth" = "mcp_jail.pth"
